--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta http-equiv=X-UA-Compatible content=IE=edge>
   <meta name=viewport content=width=device-width, initial-scale=1.0>
   <title>restaurant</title>
-  <link rel="stylesheet" href="./assets/css/build.css" type="text/css">
-  <link rel="stylesheet" href="./assets/css/styles.css" type="text/css">
+  <link rel="stylesheet" href="./build.css" type="text/css">
+  <link rel="stylesheet" href="./styles.css" type="text/css">
 </head>
 <body>
   <div id="content" class="text-white">
